Horizontal scroll on small desktop fix

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@ img {
 
 #root {
   display: flex;
+  flex-direction: column;
   flex: 1;
 }
 
