--- a/src/presentation/pages/HomePage/components/BenefitsGallery/styles.sass
+++ b/src/presentation/pages/HomePage/components/BenefitsGallery/styles.sass
@@ -103,7 +103,7 @@
 
     &__images
       margin: 80px 0 0 36px
-      width: calc(100vw - 36px)
+      width: calc(100% - 36px)
 
     &__images-inner
       gap: 16px
